added 'temp_file' function to path utilities; added Doxyfile

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -11,3 +11,5 @@ message = Update version: {current_version} -> {new_version}
 [bumpversion:file:VERSION]
 
 [bumpversion:file:CMakeLists.txt]
+
+[bumpversion:file:Doxyfile]
