adapted lib for mac

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,12 +17,12 @@ add_library(${LIBRARY_NAME} ${VENDOR_SOURCES} ${SOURCES})
 # Install the library.
 install(
     TARGETS ${LIBRARY_NAME}
-    ARCHIVE DESTINATION ${GNU_LIB_DIR}
-    LIBRARY DESTINATION ${GNU_LIB_DIR}
+    ARCHIVE DESTINATION ${LIB_DIR}
+    LIBRARY DESTINATION ${LIB_DIR}
 )
 install(
     DIRECTORY "${LIB_SRC_DIR}/"
-    DESTINATION ${GNU_INCLUDE_DIR}/${LIBRARY_NAME}
+    DESTINATION ${INCLUDE_DIR}/${LIBRARY_NAME}
     FILES_MATCHING
     PATTERN "*.h"
 )
