--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
       - dev
       - release
 jobs:
-  compile-lib:
+  linux-build:
     name: Build the library and upload it to artifacts
     runs-on: ubuntu-18.04
     strategy:
@@ -33,10 +33,10 @@ jobs:
         with:
           name: xalwart.base-${{ matrix.os.name }}-${{ matrix.compiler }}-${{ matrix.compiler_version }}
           path: xalwart.base-${{ matrix.os.name }}-${{ matrix.compiler }}-${{ matrix.compiler_version }}
-          retention-days: 90
-  test:
+          retention-days: 60
+  linux-test:
     name: "${{ matrix.os.name }}-${{ matrix.os.version }} [${{ matrix.compiler }}-${{ matrix.compiler_version }}]"
-    needs: [ compile-lib ]
+    needs: [ linux-build ]
     runs-on: ubuntu-18.04
     strategy:
       fail-fast: false
@@ -63,3 +63,81 @@ jobs:
                           -v ${{ github.workspace }}:/app \
                           xalwart/gtest:1.11.0-${{ matrix.compiler }}-${{ matrix.compiler_version }}-${{ matrix.os.name }}-${{ matrix.os.version }} \
                           bash /app/scripts/linux/test.sh ${{ matrix.os.name }} ${{ matrix.compiler }} ${{ matrix.compiler_version }}
+  macos-build:
+    name: Build the library for macOS and upload it to artifacts
+    runs-on: ${{ matrix.os_name }}-${{ matrix.os_version }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os_name: [ macos ]
+        os_version: [ 10.15, 11 ]
+        compiler:
+          - cc: gcc-10
+            cxx: g++-10
+          - cc: clang
+            cxx: clang++
+    steps:
+      - uses: actions/checkout@v2
+      - name: Configure with CMake (clang)
+        if: ${{ matrix.compiler == 'clang' }}
+        run: |
+          mkdir build
+          cd build
+          cmake -D CMAKE_BUILD_TYPE=Release ..
+      - name: Build the Library
+        run: |
+          mkdir build && cd build
+          cmake -D CMAKE_BUILD_TYPE=Release \
+                -D CMAKE_C_COMPILER=${{ matrix.compiler.cc }} \
+                -D CMAKE_CXX_COMPILER=${{ matrix.compiler.cxx }} \
+                ..
+          sudo mkdir -p /usr/local/include && sudo mkdir -p /usr/local/lib
+          make xalwart.base && sudo make install
+          cd && mkdir target-build && cd target-build
+          mkdir -p include && mkdir -p lib && cd
+          cp -r /usr/local/include/xalwart.base target-build/include
+          cp -r /usr/local/lib/xalwart.base* target-build/lib
+      - name: Upload the Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: xalwart.base-${{ matrix.os_name }}-${{ matrix.os_version }}-${{ matrix.compiler.cc }}
+          path: target-build
+          retention-days: 60
+  macos-test:
+    name: "${{ matrix.os_name }}-${{ matrix.os_version }} [${{ matrix.compiler.cc }}]"
+    needs: [ macos-build ]
+    runs-on: ${{ matrix.os_name }}-${{ matrix.os_version }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os_name: [ macos ]
+        os_version: [ 10.15, 11 ]
+        compiler:
+          - cc: gcc-10
+            cxx: g++-10
+          - cc: clang
+            cxx: clang++
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Required Software
+        run: |
+          brew install valgrind
+      - name: Create Target Directories
+        run: |
+          sudo mkdir -p /usr/local
+      - name: Download the Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: xalwart.base-${{ matrix.os_name }}-${{ matrix.os_version }}-${{ matrix.compiler.cc }}
+          path: /usr/local
+      - name: Build and Run Tests
+        run: |
+          mkdir build && cd build
+          cmake -D CMAKE_C_COMPILER=${{ matrix.compiler.cc }} \
+                -D CMAKE_CXX_COMPILER=${{ matrix.compiler.cxx }} \
+                -D CMAKE_BUILD_TYPE=Release \
+                -D XW_BUILD_LIB=OFF \
+                -D XW_BUILD_TESTS=ON \
+                ..
+          make unittests-all
+          valgrind --leak-check=full ./tests/unittests-all
