fix CI for macOS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
                           bash /app/scripts/linux/test.sh ${{ matrix.os.name }} ${{ matrix.compiler }} ${{ matrix.compiler_version }}
   macos-build:
     name: Build the library for macOS and upload it to artifacts
-    if: !${{ matrix.os_version == '10.15' && matrix.compiler.cc == 'clang' }}
+    if: ${{ matrix.os_version != '10.15' || matrix.compiler.cc != 'clang' }}
     runs-on: ${{ matrix.os_name }}-${{ matrix.os_version }}
     strategy:
       fail-fast: false
@@ -106,7 +106,7 @@ jobs:
           retention-days: 60
   macos-test:
     name: "${{ matrix.os_name }}-${{ matrix.os_version }} [${{ matrix.compiler.cc }}]"
-    if: !${{ matrix.os_version == '10.15' && matrix.compiler.cc == 'clang' }}
+    if: ${{ matrix.os_version != '10.15' || matrix.compiler.cc != 'clang' }}
     needs: [ macos-build ]
     runs-on: ${{ matrix.os_name }}-${{ matrix.os_version }}
     strategy:
