--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
       fail-fast: false
       matrix:
         os_name: [ macos ]
-        os_version: [ 10.14, 10.15, 11 ]
+        os_version: [ 11 ]
         step:
           - compiler:
               cc: gcc-10
@@ -107,7 +107,7 @@ jobs:
       fail-fast: false
       matrix:
         os_name: [ macos ]
-        os_version: [ 10.14, 10.15, 11 ]
+        os_version: [ 11 ]
         step:
           - compiler:
               cc: gcc-10
