--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,15 +89,15 @@ jobs:
                 ..
           sudo mkdir -p /usr/local/include && sudo mkdir -p /usr/local/lib
           make xalwart.base && sudo make install
-          cd && mkdir /tmp/target-build && cd /tmp/target-build
-          sudo mkdir -p include && mkdir -p lib && cd
-          cp -r /usr/local/include/xalwart.base /tmp/target-build/include
-          cp -r /usr/local/lib/libxalwart.base* /tmp/target-build/lib
+          cd && mkdir ~/target-build && cd ~/target-build
+          mkdir -p include && mkdir -p lib && cd
+          sudo cp -r /usr/local/include/xalwart.base ~/target-build/include
+          sudo cp -r /usr/local/lib/libxalwart.base* ~/target-build/lib
       - name: Upload the Artifact
         uses: actions/upload-artifact@v2
         with:
           name: xalwart.base-${{ matrix.os_name }}-${{ matrix.os_version }}-${{ matrix.step.compiler.cc }}
-          path: /tmp/target-build
+          path: ~/target-build
           retention-days: 60
   macos-test:
     name: "Testing for ${{ matrix.os_name }}-${{ matrix.os_version }} [${{ matrix.step.compiler.cc }}]"
