--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,23 +70,13 @@ jobs:
       fail-fast: false
       matrix:
         os_name: [ macos ]
-        os_version: [ 11 ]
-        step:
-          - compiler:
-              cc: gcc-10
-              cxx: g++-10
-          - compiler:
-              cc: clang
-              cxx: clang++
+        os_version: [ 10.14, 10.15, 11 ]
     steps:
       - uses: actions/checkout@v2
       - name: Build the Library
         run: |
           mkdir build && cd build
-          cmake -D CMAKE_BUILD_TYPE=Release \
-                -D CMAKE_C_COMPILER=${{ matrix.step.compiler.cc }} \
-                -D CMAKE_CXX_COMPILER=${{ matrix.step.compiler.cxx }} \
-                ..
+          cmake -D CMAKE_BUILD_TYPE=Release ..
           sudo mkdir -p /usr/local/include && sudo mkdir -p /usr/local/lib
           make xalwart.base && sudo make install
           cd && mkdir ~/target-build && cd ~/target-build
