--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
       fail-fast: false
       matrix:
         os_name: [ macos ]
-        os_version: [ 10.14, 10.15, 11 ]
+        os_version: [ 11 ]
     steps:
       - uses: actions/checkout@v2
       - name: Build the Library
@@ -97,7 +97,7 @@ jobs:
       fail-fast: false
       matrix:
         os_name: [ macos ]
-        os_version: [ 10.14, 10.15, 11 ]
+        os_version: [ 11 ]
     steps:
       - uses: actions/checkout@v2
       - name: Install Valgrind
