--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
       - release
 jobs:
   linux-build:
-    name: Build the library for Linux and upload it to artifacts
+    name: [Linux] Build the library
     runs-on: ubuntu-18.04
     strategy:
       fail-fast: false
@@ -35,7 +35,7 @@ jobs:
           path: xalwart.base-${{ matrix.os.name }}-${{ matrix.compiler }}-${{ matrix.compiler_version }}
           retention-days: 60
   linux-test:
-    name: "Testing for ${{ matrix.os.name }}-${{ matrix.os.version }} [${{ matrix.compiler }}-${{ matrix.compiler_version }}]"
+    name: [Linux] Testing [${{ matrix.os.name }}-${{ matrix.os.version }}] [${{ matrix.compiler }}-${{ matrix.compiler_version }}]
     needs: [ linux-build ]
     runs-on: ubuntu-18.04
     strategy:
@@ -64,7 +64,7 @@ jobs:
                           xalwart/gtest:1.11.0-${{ matrix.compiler }}-${{ matrix.compiler_version }}-${{ matrix.os.name }}-${{ matrix.os.version }} \
                           bash /app/scripts/linux/test.sh ${{ matrix.os.name }} ${{ matrix.compiler }} ${{ matrix.compiler_version }}
   macos-build:
-    name: Build the library for macOS and upload it to artifacts
+    name: [macOS] Build the library
     runs-on: ${{ matrix.os_name }}-${{ matrix.os_version }}
     strategy:
       fail-fast: false
@@ -90,7 +90,7 @@ jobs:
           path: ~/target-build
           retention-days: 60
   macos-test:
-    name: "Testing for ${{ matrix.os_name }}-${{ matrix.os_version }} [clang]"
+    name: [macOS] Testing [${{ matrix.os_name }}-${{ matrix.os_version }}] [clang]
     needs: [ macos-build ]
     runs-on: ${{ matrix.os_name }}-${{ matrix.os_version }}
     strategy:
@@ -119,8 +119,8 @@ jobs:
         run: |
           mkdir build && cd build
           cmake -D CMAKE_BUILD_TYPE=Release \
-                -D XW_BUILD_LIB=OFF \
-                -D XW_BUILD_TESTS=ON \
+                -D XW_CONFIGURE_LIB=OFF \
+                -D XW_CONFIGURE_TESTS=ON \
                 ..
           make unittests-all
           valgrind --leak-check=full ./tests/unittests-all
