fixed linking of tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,7 +14,7 @@ function(add_tests SUB_DIR SUB_NAME)
     set(FULL_BIN ${BINARY}-${SUB_NAME})
     add_executable(${FULL_BIN} ${SOURCES} ${TESTS_DIR}/main.cpp)
     if (NOT APPLE)
-        target_link_libraries(${BINARY} PUBLIC stdc++fs)
+        target_link_libraries(${FULL_BIN} PUBLIC stdc++fs)
     endif()
     if (WIN32)
         target_link_libraries(${FULL_BIN} PUBLIC gtest_main)
