--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,13 +1,12 @@
-name: Test
+name: Build and Test
 on:
   pull_request:
   push:
     branches:
-      - dev
       - master
 jobs:
   linux-build:
-    name: '[Linux] Build the library'
+    name: '[linux build]'
     runs-on: ubuntu-18.04
     strategy:
       fail-fast: false
@@ -17,8 +16,11 @@ jobs:
             version: 3.13
           - name: ubuntu
             version: 18.04
-        compiler: [ gcc, clang ]
-        compiler_version: [ 10 ]
+        compiler:
+          - gcc
+          - clang
+        compiler_version:
+          - 10
     steps:
       - uses: actions/checkout@v2
       - name: Build the library
@@ -33,44 +35,16 @@ jobs:
           name: xalwart.base-${{ matrix.os.name }}-${{ matrix.compiler }}-${{ matrix.compiler_version }}
           path: xalwart.base-${{ matrix.os.name }}-${{ matrix.compiler }}-${{ matrix.compiler_version }}
           retention-days: 60
-  linux-test:
-    name: '[Linux] Testing [${{ matrix.os.name }}-${{ matrix.os.version }}] [${{ matrix.compiler }}-${{ matrix.compiler_version }}]'
-    needs: [ linux-build ]
-    if: github.ref != 'refs/heads/master'
-    runs-on: ubuntu-18.04
-    strategy:
-      fail-fast: false
-      matrix:
-        os:
-          - name: alpine
-            version: 3.13
-          - name: ubuntu
-            version: 18.04
-          - name: ubuntu
-            version: 20.04
-        compiler: [ clang, gcc ]
-        compiler_version: [ 10 ]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Download the artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: xalwart.base-${{ matrix.os.name }}-${{ matrix.compiler }}-${{ matrix.compiler_version }}
-          path: xalwart.base-${{ matrix.os.name }}-${{ matrix.compiler }}-${{ matrix.compiler_version }}
-      - name: Build and run tests
-        run: |
-          sudo docker run -i \
-                          -v ${{ github.workspace }}:/app \
-                          xalwart/gtest:1.11.0-${{ matrix.compiler }}-${{ matrix.compiler_version }}-${{ matrix.os.name }}-${{ matrix.os.version }} \
-                          bash /app/scripts/linux/test.sh ${{ matrix.os.name }} ${{ matrix.compiler }} ${{ matrix.compiler_version }}
   macos-build:
-    name: '[macOS] Build the library'
+    name: '[macOS build]'
     runs-on: ${{ matrix.os_name }}-${{ matrix.os_version }}
     strategy:
       fail-fast: false
       matrix:
-        os_name: [ macos ]
-        os_version: [ 11 ]
+        os_name:
+          - macos
+        os_version:
+          - 11
     steps:
       - uses: actions/checkout@v2
       - name: Build the library
@@ -89,19 +63,56 @@ jobs:
           name: xalwart.base-${{ matrix.os_name }}-${{ matrix.os_version }}
           path: ~/target-build
           retention-days: 60
+  linux-test:
+    name: '[linux test]'
+    needs:
+      - linux-build
+    runs-on: ubuntu-18.04
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - name: alpine
+            version: 3.13
+          - name: ubuntu
+            version: 18.04
+          - name: ubuntu
+            version: 20.04
+        compiler:
+          - clang
+          - gcc
+        compiler_version:
+          - 10
+    steps:
+      - uses: actions/checkout@v2
+      - name: Download the artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: xalwart.base-${{ matrix.os.name }}-${{ matrix.compiler }}-${{ matrix.compiler_version }}
+          path: xalwart.base-${{ matrix.os.name }}-${{ matrix.compiler }}-${{ matrix.compiler_version }}
+      - name: Build and run tests
+        run: |
+          sudo docker run -i \
+                          -v ${{ github.workspace }}:/app \
+                          xalwart/gtest:1.11.0-${{ matrix.compiler }}-${{ matrix.compiler_version }}-${{ matrix.os.name }}-${{ matrix.os.version }} \
+                          bash /app/scripts/linux/test.sh ${{ matrix.os.name }} ${{ matrix.compiler }} ${{ matrix.compiler_version }}
   macos-test:
-    name: '[macOS] Testing [${{ matrix.os_name }}-${{ matrix.os_version }}] [clang]'
-    needs: [ macos-build ]
-    if: github.ref != 'refs/heads/master'
+    name: '[macOS test]'
+    needs:
+      - macos-build
     runs-on: ${{ matrix.os_name }}-${{ matrix.os_version }}
     strategy:
       fail-fast: false
       matrix:
-        os_name: [ macos ]
-        os_version: [ 11 ]
+        os_name:
+          - macos
+        os_version:
+          - 11
     steps:
       - uses: actions/checkout@v2
-      - name: Install valgrind
+      - name: Install Valgrind
+        continue-on-error: true
+        id: install_valgrind
         run: |
           brew tap LouisBrunner/valgrind
           brew install --HEAD LouisBrunner/valgrind/valgrind
@@ -116,7 +127,7 @@ jobs:
         with:
           name: xalwart.base-${{ matrix.os_name }}-${{ matrix.os_version }}
           path: /usr/local
-      - name: Build and run tests
+      - name: Build tests
         run: |
           mkdir build && cd build
           cmake -D CMAKE_BUILD_TYPE=Release \
@@ -124,4 +135,11 @@ jobs:
                 -D XW_CONFIGURE_TESTS=ON \
                 ..
           make unittests-all
-          valgrind --leak-check=full ./tests/unittests-all
+      - name: Run tests with Valgrind
+        if: steps.install_valgrind.outcome == 'success'
+        run:
+          valgrind --leak-check=full ./build/tests/unittests-all
+      - name: Run tests
+        if: steps.install_valgrind.outcome != 'success'
+        run:
+          ./build/tests/unittests-all
